--- a/Desktop/BrickHack/ambulink/src/components/TextButton/TextButton.scss
+++ b/Desktop/BrickHack/ambulink/src/components/TextButton/TextButton.scss
@@ -4,7 +4,7 @@
   border-radius: 8px;
   color: white;
   font-family: "Plus Jakarta Sans";
-  height: 50px;
+  min-height: 50px;
   font-size: 16px;
   font-weight: 600;
   border: none;
